# react-native-rust-module

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE 2  README 2.md  README.md  package.json  react-native-rust.podspec  tsconfig.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativerust/: RustBridge.java  RustModule.java  RustPackage.java
example/: App.js  app.json  package.json
example/android/: settings.gradle
example/android/app/: _BUCK  build.gradle
example/android/app/src/debug/java/com/tryout/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/tryout/: MainActivity.java  MainApplication.java
example/android/app/src/main/jni/: Android.mk  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/RustExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/RustExample.xcodeproj/: project.pbxproj
example/ios/RustExample.xcodeproj/xcshareddata/xcschemes/: RustExample.xcscheme
example/ios/RustExample.xcworkspace/: contents.xcworkspacedata
example/ios/RustExampleTests/: RustExampleTests.m
ios/: Rust-Bridging-Header.h  Rust.m  Rust.swift
ios/Rust.xcodeproj/: project.pbxproj
ios/include/: signer.h
rust/signer/: Cargo.toml  Makefile  copy_android.sh
rust/signer/src/: lib.rs
rust/signer/src/export/: mod.rs
src/: index.tsx
(+3 files in other folders)
