[package]
name = "signer"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
# base58 = "0.1.0"
# base64 = "0.10.1"
jni = { version = "0.16.0", optional = true }
# lazy_static = "1.3.0"
libc = "0.2"
# thiserror = "1.0"
anyhow = "1.0"
ffi-support = "0.4"

[lib]
name = "signer"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["jni"]
